<resources>
    <string name="app_name">IME Seminar</string>

    <!-- Buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_save">Save </string>

    <!-- Labels -->
    <string name="lbl_welcome">Welcome to IME Seminar</string>
    <string name="lbl_registration">Registration</string>
    <string name="lbl_edit_account">Edit account info</string>

    <!-- Hint -->
    <string name="hint_nusp">USP ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="empty_fields_message">The following fields cannot be empty: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="auto_connect">Connect automatically next time</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="registration_succeeded">Awesome</string>
    <string name="account_created">Your account was successfully created.</string>
    <string name="ok">OK</string>
    <string name="seminars">Seminars</string>
    <string name="account">Account Info</string>
    <string name="edit_account">Edit account</string>
    <string name="read_qrcode">Ler QRCode</string>
    <string name="logoff">Logoff</string>
    <string name="login_successful">Welcome to IME Seminar.</string>
    <string name="login_failed">Login failed. Please check your credentials and connection.</string>

    <!-- Error messages -->
    <string name="ERROR_API_S001">An error occurred while adding a student. Error message: %s</string>
    <string name="ERROR_API_S002">An error occurred while editing a student. Error message: %s</string>
    <string name="ERROR_API_S003">An error occurred while deleting a student. Error message: %s </string>
    <string name="ERROR_API_S004">An error occurred while getting a student. Error message: %s</string>
    <string name="ERROR_API_S005">An error occurred while getting all students. Error message: %s</string>

    <string name="ERROR_API_P001">An error occurred while adding a professor. Error message: %s</string>
    <string name="ERROR_API_P002">An error occurred while editing a professor. Error message: %s</string>
    <string name="ERROR_API_P003">An error occurred while deleting a professor. Error message: %s </string>
    <string name="ERROR_API_P004">An error occurred while getting a professor. Error message: %s</string>
    <string name="ERROR_API_P005">An error occurred while getting all professors. Error message: %s</string>

    <string name="ERROR_API_SEM001">An error occurred while adding a seminar. Error message: %s</string>
    <string name="ERROR_API_SEM002">An error occurred while editing a seminar. Error message: %s</string>
    <string name="ERROR_API_SEM003">An error occurred while deleting a seminar. Error message: %s </string>
    <string name="ERROR_API_SEM004">An error occurred while getting a seminar. Error message: %s</string>
    <string name="ERROR_API_SEM005">An error occurred while getting all seminars. Error message: %s</string>

    <string name="ERROR_API_ATT001">An error occurred while getting all students for a seminar. Error message: %s</string>

    <string name="edit_account_failed">Edit account failed.</string>
    <string name="edit_account_success">Account updated successfully.</string>
    <string name="lbl_registration_invite">Don\'t have an account?</string>
    <string name="registration_uspid_subtitle">Insert your USP id</string>
    <string name="registration_name_subtitle">Insert your full name</string>
    <string name="registration_password_subtitle">Password must be at least 6 characters</string>
    <string name="registration_role_subtitle">Select your role.</string>
    <string name="confirm_attendance_bluetooth">Confirm attendance over Bluetooth</string>
    <string name="confirm_attendance_qrcode">Confirm attendance over QRCode</string>
    <string name="student_counter">students are confirmed to this seminar.</string>

    <string name="seminar_add_title">Add a seminar</string>
    <string name="seminar_add_success">Seminar was added successfully.</string>
    <string name="seminar_add_failed">Failed to add seminar.</string>
    <string name="generate_qrcode">Generate Seminar QRCode</string>
    <string name="listen_bluetooth_devices">Listen Bluetooth devices</string>
    <string name="attendance">Attendance</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="qrcode">QRCode</string>

    <string name="qrCode_label">QRCode</string>
    <string name="qrcode_inititalization">Preparing to read QRCode</string>
    <string name="qrcode_permission_denied">Fail to read QRCode! The system needs cam permission to do it.</string>
    <string name="ok_qrcode_message">Successful! You have just confirmed your presence! (SeminarId: %s)</string>
    <string name="error_qrcode_message">Fail to confirm the presence! (SeminarId: %s)</string>
    <string name="incorrect_qrcode_message">The QRCode read is not the same! (SeminarId: %s)</string>
    <string name="qrcode_show_code">QRCode ready! Bring the other device closer.</string>
    <string name="stop_listening_bluetooth">Stop listening Bluetooth</string>

    <string name="qr_code_title">QR Code</string>
    <string name="near_devices">Near devices</string>
    <string name="paired_devices">Paired devices</string>
    <string name="bluetooth_is_off">Bluetooth is off</string>
    <string name="incorret_seminar">Student confirmed in the wrong seminar</string>
    <string name="student_confirmed">Student confirmed: %s</string>
    <string name="total_students_confirmed">%d are registered</string>
    <string name="zero_students_confirmed">0 Students</string>
    <!-- Roles -->
    <string-array name="roles">
        <item>Student</item>
        <item>Professor</item>
    </string-array>
</resources>
