<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.usp.ime.mac5743.ep1.seminarioime.activity.SeminarDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/softGray"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/seminar_title"
            style="@style/title"
            tools:text="Teste" />

        <TextView
            android:id="@+id/seminar_counter"
            style="@style/subtitle"
            tools:text="14 alunos cadastrados" />

        <View style="@style/horizontal_line" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/seminar_attendance_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/student_actions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/softGray"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/attendance_qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="confirmAttendanceViaQRCode"
            android:text="@string/confirm_attendance_qrcode" />

        <Button
            android:id="@+id/attendance_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="confirmAttendanceViaBluetooth"
            android:text="@string/confirm_attendance_bluetooth" />

    </LinearLayout>

    <!-- Layout for professor actions is gone by default -->

    <LinearLayout
        android:id="@+id/professor_actions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/softGray"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <Button
            android:id="@+id/generate_qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="generateQRCode"
            android:text="@string/generate_qrcode" />

        <Button
            android:id="@+id/listen_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listenBluetooth"
            android:text="@string/listen_bluetooth_devices" />

        <Button
            android:id="@+id/stop_listening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="stopListeningBluetooth"
            android:text="@string/stop_listening_bluetooth" />

    </LinearLayout>


</LinearLayout>
